# mccm

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml
examples/: compose.yml
src/: components.rs  compose.rs  containers.rs  main.rs  manager.rs  modrinth.rs  server.rs
src/components/: card.rs  create.rs  env_editor.rs  mod.rs  motd.rs
src/manager/: mod.rs  record.rs  worker.rs
src/routes/: create.rs  home.rs  icon.rs  mod.rs
src/routes/create/: mod.rs  modpack.rs
src/routes/server/: icon.rs  mod.rs  motd.rs  page.rs
src/server/: container_file.rs  env.rs  error.rs  file.rs  icon.rs  list.rs  mod.rs  properties.rs
static/: style.css
