[package]
name = "mccm"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-files = "0.6"
maud = { version = "0.27.0", features = ["actix-web"] }
bollard = "0.19.4"
serde = { version = "1", features = ["derive"] }
docker-compose-types = "0.22.0"
indexmap = "2.13.0"
serde_yaml = "0.9"
futures-util = "0.3"
tar = "0.4"
tokio = { version = "1", features = ["sync", "time"] }
